--- a/HOME.html
+++ b/HOME.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="nav">
-        <a href="HOME.html" id="home">HOME</a>
+        HOME
     </div>
 
     <div class="nav-menu">
@@ -18,14 +18,25 @@
         <a href="kid.html" id="kid">Kid</a>
     </div>
 
-    <div class="main"> main
-        <div class="contents">
-            <div class="content1">1</div>
-            <div class="content2">2</div>
-            <div class="content3">3</div>
-            <div class="content4">4</div>
-            <div class="content5">5</div>
-            <div class="content6">6</div>
+    <div class="main">
+        <div class="contents1">
+            <div class="content1">
+                <img src="img/m1.png" id="m1">
+            </div>
+            <div class="content2">
+                <img src="img/m2.png" id="m2">
+            </div>
+            <div class="content3">
+                <img src="img/m3.png" id="m3">
+            </div>
+            <div class="content4">
+                <img src="img/m4.png" id="m4">
+            </div>
+        </div>
+        <div class="contents2">
+            <div class="content5">4</div>
+            <div class="content6">5</div>
+            <div class="content7">6</div>
         </div>
     </div>
     
