아이템 추가

--- a/man.html
+++ b/man.html
@@ -18,14 +18,34 @@
         <a href="kid.html" id="kid">Kid</a>
     </div>
 
-    <div class="main"> main
-        <div class="contents">
-            <div class="content1"></div>
-            <div class="content2"></div>
-            <div class="content3"></div>
-            <div class="content4"></div>
-            <div class="content5"></div>
-            <div class="content6"></div>
+    <div class="main">
+        <div class="contents1">
+            <div class="content1">
+                <img src="img/m1.png" id="m1">
+            </div>
+            <div class="content2">
+                <img src="img/m2.png" id="m1">
+            </div>
+            <div class="content3">
+                <img src="img/m3.png" id="m1">
+            </div>
+            <div class="content4">
+                <img src="img/m4.png" id="m1">
+            </div>
+        </div>
+        <div class="contents2">
+            <div class="content5">
+                <img src="img/m5.png" id="m1">
+            </div>
+            <div class="content6">
+                <img src="img/m6.png" id="m1">
+            </div>
+            <div class="content7">
+                <img src="img/m7.png" id="m1">
+            </div>
+            <div class="content8">
+                <img src="img/m8.png" id="m1">
+            </div>
         </div>
     </div>
     
