--- a/HOME.html
+++ b/HOME.html
@@ -21,13 +21,13 @@
     <div class="main">
         <div class="contents1">
             <div class="content1">
-                <img src="img/m5.png" id="m1">
+                <img src="img/m5.png" id="m1">     
             </div>
             <div class="content2">
                 <img src="img/m8.png" id="m1">
             </div>
             <div class="content3">
-                <img src="img/w5.png" id="m1">
+                <img src="img/k1.png" id="m1">
             </div>
             <div class="content4">
                 <img src="img/w2.png" id="m1">
@@ -35,18 +35,20 @@
         </div>
         <div class="contents2">
             <div class="content5">
-                <img src="img/m5.png" id="m1">
+                <img src="img/k4.png" id="m1">
             </div>
             <div class="content6">
-                <img src="img/m1.png" id="m1">
+                <img src="img/w6.png" id="m1">
             </div>
             <div class="content7">
                 <img src="img/m7.png" id="m1">
             </div>
             <div class="content8">
-                <img src="img/m8.png" id="m1">
+                <img src="img/k2.png" id="m1">
             </div>
         </div>
+        <p class="title1">개쩌는 내용</p>
+        <div class="text1">대충 개쩌는 내용</div>
     </div>
     
 </body>
