--- a/Db_project_modify (1)/signin.html
+++ b/Db_project_modify (1)/signin.html
@@ -5,16 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>signup</title>
-    <link rel="stylesheet" href="signup.css">
+    <link rel="stylesheet" href="signin.css">
 </head>
 <body>
 
     <div class="main">
-        <p class="maintext">Sign up</p>
+        <p class="maintext">Sign in</p>
         <div class="write">
             <p id="id">ID</p><input type="text"  id="s">
             <p id="pw">Password</p><input type="text" id="s">
-            <p id="vpw">Verify Password</p><input type="text" id="s">
             <div>
                 <button class="btn1">submit</button>
             </div>
